--- a/src/components/Queue/Queue.css
+++ b/src/components/Queue/Queue.css
@@ -5,7 +5,7 @@
   border: 1px solid green;
   border-radius: 3px;
   padding: 10px 0;
-  height: 2.5vw;
+  height: 44px;
 }
 
 .queue li {
@@ -14,8 +14,8 @@
 }
 
 .pet-thumbnail {
-  width: 2.5vw;
-  height: 100%;
+  width: 40px;
+  height: 40px;
   border: 1px solid green;
   border-radius: 5px;
 }
