--- a/src/routes/AdoptionPage/AdoptionPage.css
+++ b/src/routes/AdoptionPage/AdoptionPage.css
@@ -1,5 +1,6 @@
 .AdoptionPage {
   display: flex;
+  flex-direction: column;
   max-width: 1000px;
   justify-content: center;
   margin: 0 auto 0;
@@ -16,4 +17,10 @@
 
 .AdoptionPage__header h2 {
   margin: 0 15px;
+}
+
+@media screen and (min-width: 1000px) {
+  .AdoptionPage {
+    flex-direction: row;
+  }
 }
